# learn-webgpu-sandbox

react-wgpu/: README.md  package-lock.json  package.json  tsconfig.json
react-wgpu/src/: App.tsx  GpuMandelbrotCanvas.tsx  GpuTriangleCanvas.tsx  GpuUtil.ts  createMandelbrotTexture.ts  createScreenRectRenderer.ts  helloComputePipeline.ts
rust-compute-cli/: Cargo.toml
rust-compute-cli/src/: main.rs
rust-desktop/: Cargo.toml
rust-desktop/src/: compute.wgsl  lib.rs  main.rs  render_triangle.rs  shader.wgsl
